Armature "Switch Direction" removes parenting. #34123

Closed
opened 2013-02-05 22:41:15 +01:00 by Tobias Oelgarte · 6 comments

%%%--- Blender version with error, and version that worked ---
r54287

- Short description of error ---

Switch direction in bone edit mode destroys parent relationships.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

I appended an example file. If you switch the direction of the selected bone, then the parenting of the bone is lost (children and itself), but the bone does not change the direction. If you select switch direction, then it switches the direction. The parent relation should not be lost and it should switch the direction in the first time.

%%%

%%%--- Blender version with error, and version that worked --- r54287 - Short description of error --- Switch direction in bone edit mode destroys parent relationships. - Steps for others to reproduce the error (preferably based on attached .blend file) --- I appended an example file. If you switch the direction of the selected bone, then the parenting of the bone is lost (children and itself), but the bone does not change the direction. If you select switch direction, then it switches the direction. The parent relation should not be lost and it should switch the direction in the first time. %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Assigning to self.%%%

%%%Assigning to self.%%%
Member

%%%54345: Fixed the problem with flipping not working the first time. It turns out it was flipping the bone twice, nullifying the effect.

As for the parent relationships being removed, IMO this is not a bug. It doesn't seem useful/logical that you'd want a setup like A--> <---B (where both are pointed at each other) or <--A B--> (where both a rooted at the same point) where rotating A would rotate the move the pivot of B (which is no longer situated at tip of A). IMO it feels wrong to have inversed parenting like that, not to mention being confusing when all the bones are connected in a chain (where it's difficult to see that these relationships, leading to unexpected problems). Maybe I'm wrong on this though, as I've never really seen a need for this kind of setups in my own rigs. Is this useful for anything at all?%%%

%%%54345: Fixed the problem with flipping not working the first time. It turns out it was flipping the bone twice, nullifying the effect. As for the parent relationships being removed, IMO this is not a bug. It doesn't seem useful/logical that you'd want a setup like A--> <---B (where both are pointed at each other) or <--A B--> (where both a rooted at the same point) where rotating A would rotate the move the pivot of B (which is no longer situated at tip of A). IMO it feels wrong to have inversed parenting like that, not to mention being confusing when all the bones are connected in a chain (where it's difficult to see that these relationships, leading to unexpected problems). Maybe I'm wrong on this though, as I've never really seen a need for this kind of setups in my own rigs. Is this useful for anything at all?%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%It makes a lot of sense to have opposing bones. Any good foot rig (biped) has them and often you just want a bone to be rotated the other way around while editing, so that the tip is at the desired target location or the rotation axis is located at the opposite end. It is often very convenient to just flip a bone if you work with snapping and need to be precise.

I consider this a bug, because it breaks dependencies without notifying the user. It is named "switch direction" and not "disconnect from parent and all children (also flips direction)". ;-)

I noticed it today as i worked on rig and notices that the head of a bone should be at the location of it's tail, just because one constraint (IK) can't aim for the head or tail, So i wanted to switch the direction and lost all parenting in the progress and noticed it later on as nothing worked as intended.

%%%

%%%It makes a lot of sense to have opposing bones. Any good foot rig (biped) has them and often you just want a bone to be rotated the other way around while editing, so that the tip is at the desired target location or the rotation axis is located at the opposite end. It is often very convenient to just flip a bone if you work with snapping and need to be precise. I consider this a bug, because it breaks dependencies without notifying the user. It is named "switch direction" and not "disconnect from parent and all children (also flips direction)". ;-) I noticed it today as i worked on rig and notices that the head of a bone should be at the location of it's tail, just because one constraint (IK) can't aim for the head or tail, So i wanted to switch the direction and lost all parenting in the progress and noticed it later on as nothing worked as intended. %%%

%%%PS: It should disconnect bones that are connected, but should keep the parenting.%%%

%%%PS: It should disconnect bones that are connected, but should keep the parenting.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34123
No description provided.